apps/mycroft/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycroft-frontend
  namespace: mycroft
  labels:
    app: mycroft-frontend
spec:
  type: ClusterIP
  selector:
    app: mycroft-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
